fixed header z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,7 +10,7 @@
 	padding: $pad-thick-sides;
 	align-items: center;
 	justify-content: space-between;
-	z-index: 3;
+	z-index: 5;
 
 	ul {
 		display: flex;
